# BioEM

./: .clang-format  .gitignore  Authors.txt  CMakeLists.txt  FindFFTW.cmake  License.txt  README.md  autotuner.cpp  bioem.cpp  bioem_algorithm.h  bioem_cuda.cu  main.cpp  map.cpp  model.cpp  param.cpp  timer.cpp
Quaternions/: QUATERNION_LIST_36864_Orient  QUATERNION_LIST_4608_Orient
Tutorial_BioEM/: Euler_Angle_List  Euler_Angle_List_Prior  ListMRC  Model_Text  OneImage.mrc  Param_Input  Param_Input_Priors  Param_Input_Priors_Quat  Param_Input_Quat  Param_Input_WritePAng  Param_Print_MAP  Param_ProRun  Quat_list_Small  Text_Image_Form  TwoImages.mrc
Tutorial_BioEM/MODEL_COMPARISION/: MODEL_2  Quaternion_List
Tutorial_BioEM/MODEL_COMPARISON/: MODEL_1  Param_Input_ModelComparision  bioem_array_sge.sh  bioem_array_slurm.sh  create_gridOr.sh  multiply_quat.py  smallGrid_125  subtract_LogP.sh
Tutorial_BioEM/MODEL_COMPARISON/Particles/: Particle_1  Particle_10  Particle_11  Particle_12  Particle_13  Particle_14  Particle_15  Particle_16  Particle_17  Particle_18  Particle_19  Particle_2  Particle_20  Particle_3  Particle_4  Particle_5  Particle_6  Particle_7  Particle_8  Particle_9
Tutorial_BioEM/test_outputs/: ANG_PROB  Output_Probabilities_prior  Output_Probabilities_ref
doc/: bib_manual.bib  conf.py  index.rst  make.bat  manual.rst
doc/exts/: inpar.py
include/: autotuner.h  bioem.h  bioem_cuda.h  bioem_cuda_internal.h  defs.h  map.h  model.h  mrc.h  param.h  timer.h
